force-app/main/default/objects/RH_Fit_Interview__c/RH_Fit_Interview__c.object-meta.xml
<CustomObject>
    <description>Entretien RH Fit: planification, questions Einstein, transcription, sentiment, score IA et validation humaine.</description>
    <label>RH Fit Interview</label>
    <nameField>
        <label>RH Fit Interview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RH Fit Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>