force-app/main/default/objects/RH_Fit_Interview__c/fields/AI_Feedback__c.field-meta.xml
<CustomField>
    <fullName>AI_Feedback__c</fullName>
    <label>AI Feedback</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>