force-app/main/default/objects/RH_Fit_Interview__c/fields/AI_RHFit_Score__c.field-meta.xml
<CustomField>
    <fullName>AI_RHFit_Score__c</fullName>
    <label>AI RH Fit Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>