force-app/main/default/objects/RH_Fit_Interview__c/fields/Audio_ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>Audio_ContentVersion_Id__c</fullName>
    <label>Audio File Id</label>
    <description>ContentVersion Id of the uploaded RH Fit audio recording</description>
    <type>Text</type>
    <length>18</length>
</CustomField>