force-app/main/default/objects/RH_Fit_Interview__c/fields/Generated_Questions__c.field-meta.xml
<CustomField>
    <fullName>Generated_Questions__c</fullName>
    <label>Generated Questions</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>