force-app/main/default/objects/RH_Fit_Interview__c/fields/Interview_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interview_DateTime__c</fullName>
    <label>Interview Date Time</label>
    <type>DateTime</type>
</CustomField>