force-app/main/default/objects/RH_Fit_Interview__c/fields/Jitsi_Room__c.field-meta.xml
<CustomField>
    <fullName>Jitsi_Room__c</fullName>
    <label>Jitsi Room</label>
    <type>Text</type>
    <length>255</length>
</CustomField>