force-app/main/default/objects/RH_Fit_Interview__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Manager Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>