force-app/main/default/objects/RH_Fit_Interview__c/fields/Meet_Link__c.field-meta.xml
<CustomField>
    <fullName>Meet_Link__c</fullName>
    <label>Meet Link</label>
    <type>Url</type>
</CustomField>