force-app/main/default/objects/RH_Fit_Interview__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RH Fit Interviews</relationshipLabel>
    <relationshipName>RH_Fit_Interviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>