force-app/main/default/objects/RH_Fit_Interview__c/fields/Recruiter_Validated_Score__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_Validated_Score__c</fullName>
    <label>Recruiter Validated Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>