force-app/main/default/objects/RH_Fit_Interview__c/fields/Sentiment_Label__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Label__c</fullName>
    <label>Sentiment Label</label>
    <type>Text</type>
    <length>40</length>
</CustomField>