force-app/main/default/objects/RH_Fit_Interview__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>