force-app/main/default/objects/RH_Fit_Interview__c/fields/Transcription__c.field-meta.xml
<CustomField>
    <fullName>Transcription__c</fullName>
    <label>Transcription</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>